change database to pg

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,18 +5,18 @@
 #   gem 'sqlite3'
 #
 development:
-  adapter: mysql2
+  adapter: postgresql
   database: my_database_development
   pool: 5
   timeout: 5000
 test:
-  adapter: mysql2
+  adapter: postgresql
   database: my_database_test
   pool: 5
   timeout: 5000
 
 production:
-  adapter: mysql2
+  adapter: postgresql
   database: my_database_production
   pool: 5
   timeout: 5000
